	- Tweak the clamped altitude and speed min/max values to give more usable sliders.
	- Scale steer limiter based on atmospheric density in order to account how dynamic pressure will vary based on this value.
	- Add the target's average radius to the vessel-avoidance detection.
	- Use an average of the recent speed instead of the max speed in determining the turn radius.
- GameModes:
	- Add options for respecting the flow state of stealing (in)/stolen (out) resources.
- UI:
	- Add a "Slider Resolution" slider to the pilot AI (currently just PID, Altitudes and Speeds) to allow finer or coarser adjustments to those sliders in the PAW (not the AI GUI for now).
- Weapons:
	- Add in option to set an action group toggled for when weapons are selected/deselected (can be used for deploying weapons or for other actions).
- Tournamements:
	- Add option to save the summary plot to a PNG file. Use '-s' to save to a random tempfile, use '-s fig.png' to specify the file.
	- Tweak the auto-vessels-per-heat optimisation for when we're just over the limit.
- Internal:
	- Add option to use average radius in Vessel.GetRadius instead of max.

v1.4.16.1
FIXES
- Fix for tournament.state files with craft filenames containing commas (don't use filenames containing '],['!).
- Fixes issue breaking some guns in v1.4.16.0.
IMPROVEMENTS
- Adds localization for various parts.
- Adds Deployable Missile Rail demo part.

v1.4.16.0
FIXES
- Don't clamp values when switching from text input to sliders and the unclamped option has been toggled.
- Fix wrong component type in BD check.
- Fix rocketpod RoF slider.
- Fix barrage-firing burst-fire weapons; these will now properly ripple again.
- Remove the restriction on the target being ahead of the weapon for opening/closing cargo bays as it messes with missile bays while planes are evading.
- Fix ammo selector issue.
- Fix various NREs.
IMPROVEMENTS
- General:
	- Add Waterfall config for the Saturn engine.